adl-frontend/src/test/resources/unit/error/semantic/params/Param2.adl
//#SemanticError GroupId=MADL ErrorId=INVALID_REFERENCE_TOO_MANY_ARGUMENT line=4

primitive params.Param2 extends 
Primitive1
(1, 2, 3)
{

}